2002-11-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (BroadcastRestack):
	split long packets, fixed a bug and cleaned up

	* libs/Module.c (ReadFvwmPacket):
	ignore packets that are too long

	* fvwm/fvwm.1.in:
	document Pop{up,down}Delay defaults

2002-11-06  olicha  <olivier.chapuis@free.fr>

	* libs/Fft.c (FftGetFont):
	(FftGetRotatedFont):
	Use a more perfectioned method for loading font with Xft/Fc. This
	method allows sanity check. Preserve the matrix when rotating
	Xft/Fc fonts.

	* libs/Flocale.c (FlocaleGetMinOffset):
	(FlocaleRotateDrawString):
	(FlocaleGetFontSet):
	(FlocaleGetFont):
	* libs/Fft.c (FftDrawString):
	(FftGetFont):
	* libs/FftInterface.h:
	* fvwm/geometry.c (get_title_font_size_and_offset):
	Move the computation of the good "y" for drawing text into Flocale.
	Use the max ascent, descent and height for font metric (in the place
	of the min's one).

	* libs/Flocale.c (FlocalePrintLocaleInfo):
	* libs/Flocale.h:
	* libs/Fft.c (FftPrintPatternInfo):
	* libs/Fft.h:
	* fvwm/builtins.c (CMD_PrintInfo):
	* NEWS:
	* fvwm.1.in:
	New option "Locale" to PrintInfo Command

2002-11-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleExpose):
	removed no-op

2002-11-04  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1.in: colour -> color
	Language check.

2002-11-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.1.in:
	* fvwm/fvwm.c (usage):
	(main):
	pallet -> palette

2002-11-04  olicha  <olivier.chapuis@free.fr>

	* configure.in:
	Added -lXrender in Xft 1 tests (Ethan Blanton <eblanton@cs.ohiou.edu>)

	* libs/PictureUtils.c (alloc_color_dynamic_no_limit):
	(finish_ct_init):
	(PictureFreeColors):
	(PicturePrintColorInfo):
	Trace colours allocation out of the pallet in depth <= 8. Better
	information on coulours

	* libs/Fft.c (FftGetRotatedFont):
	* libs/Fft.h:
	Fixed rotated font when the original font has a matrix

	* libs/PictureBase.c (PictureInitCMapRoot):
	* libs/PictureUtils.h: