@@ -1,5 +1,8 @@
 2002-11-07  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/focus.c (__focus_grab_buttons):
+	fixed initial button grabbing on client window
+
 	* fvwm/stack.c (BroadcastRestack):
 	split long packets, fixed a bug and cleaned up
 
